# mongodb_rabbitmq

./: pyproject.toml
first_part/: connect.py  models.py  search.py  seeds.py
second_part/: consumer.py  models.py  producer.py
