[tool.poetry]
name = "hm-mongodb"
version = "0.1.0"
description = ""
authors = ["serhiikhkr <05hello.world11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.0"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
